All connections supported (#135)
* Remove FileStorage, loadFile connectors

* Remove FileStorage, loadFile connectors